js/iemlParser.js
// $ANTLR 3.1.2 /eclipse/workspace/imelpreter/js/ieml.g 2009-03-24 21:42:27

var iemlParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){


    }).call(this);

    iemlParser.superclass.constructor.call(this, input, state);

    this.dfa2 = new iemlParser.DFA2(this);

         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(iemlParser, {
    L5LM: 27,
    PRINTSTAT: 6,
    LETTER: 30,
    CAT3: 12,
    PRIM: 15,
    XMLSTAT: 7,
    PRIMITIVE: 20,
    WS: 29,
    CAT4: 13,
    CAT5: 14,
    LOWER: 32,
    L4LM: 26,
    CAT2: 11,
    L0LM: 21,
    EXPRESSION: 4,
    FUNCTION: 8,
    UPPER: 33,
    CAT0: 9,
    EOF: -1,
    POR: 28,
    RPAREN: 18,
    SCRIPT: 5,
    CAT1: 10,
    LPAREN: 17,
    L2LM: 24,
    DIGIT: 31,
    L3LM: 25,
    STAR: 19,
    EVENT: 22,
    NAME: 16,
    L1LM: 23
});

(function(){
// public class variables
var L5LM= 27,
    PRINTSTAT= 6,
    LETTER= 30,
    CAT3= 12,
    PRIM= 15,
    XMLSTAT= 7,
    PRIMITIVE= 20,
    WS= 29,
    CAT4= 13,
    CAT5= 14,
    LOWER= 32,
    L4LM= 26,
    CAT2= 11,
    L0LM= 21,
    EXPRESSION= 4,
    FUNCTION= 8,
    UPPER= 33,
    CAT0= 9,
    EOF= -1,
    POR= 28,
    RPAREN= 18,
    SCRIPT= 5,
    CAT1= 10,
    LPAREN= 17,
    L2LM= 24,
    DIGIT= 31,
    L3LM= 25,
    STAR= 19,
    EVENT= 22,
    NAME= 16,
    L1LM= 23;

// public instance methods/vars
org.antlr.lang.extend(iemlParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return iemlParser.tokenNames; },
    getGrammarFileName: function() { return "/eclipse/workspace/imelpreter/js/ieml.g"; }
});
org.antlr.lang.augmentObject(iemlParser.prototype, {

    // inline static return class
    script_return: (function() {
        iemlParser.script_return = function(){};
        org.antlr.lang.extend(iemlParser.script_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:21:1: script : starexpr EOF ;
    // $ANTLR start "script"
    script: function() {
        var retval = new iemlParser.script_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF2 = null;
         var starexpr1 = null;

        var EOF2_tree=null;

        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:21:8: ( starexpr EOF )
            // /eclipse/workspace/imelpreter/js/ieml.g:21:10: starexpr EOF
            root_0 = this.adaptor.nil();

            this.pushFollow(iemlParser.FOLLOW_starexpr_in_script81);
            starexpr1=this.starexpr();

            this.state._fsp--;

            this.adaptor.addChild(root_0, starexpr1.getTree());
            EOF2=this.match(this.input,EOF,iemlParser.FOLLOW_EOF_in_script83); 
            EOF2_tree = this.adaptor.create(EOF2);
            this.adaptor.addChild(root_0, EOF2_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    functionEval_return: (function() {
        iemlParser.functionEval_return = function(){};
        org.antlr.lang.extend(iemlParser.functionEval_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:23:1: functionEval : fn= NAME LPAREN (exp= starexpr | otherfn= functionEval ) RPAREN -> ^( FUNCTION $fn ( $exp)? ( $otherfn)? ) ;
    // $ANTLR start "functionEval"
    functionEval: function() {
        var retval = new iemlParser.functionEval_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var fn = null;
        var LPAREN3 = null;
        var RPAREN4 = null;
         var exp = null;
         var otherfn = null;

        var fn_tree=null;
        var LPAREN3_tree=null;
        var RPAREN4_tree=null;
        var stream_RPAREN=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token RPAREN");
        var stream_LPAREN=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token LPAREN");
        var stream_NAME=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token NAME");
        var stream_starexpr=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule starexpr");
        var stream_functionEval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule functionEval");
        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:24:3: (fn= NAME LPAREN (exp= starexpr | otherfn= functionEval ) RPAREN -> ^( FUNCTION $fn ( $exp)? ( $otherfn)? ) )
            // /eclipse/workspace/imelpreter/js/ieml.g:24:5: fn= NAME LPAREN (exp= starexpr | otherfn= functionEval ) RPAREN
            fn=this.match(this.input,NAME,iemlParser.FOLLOW_NAME_in_functionEval95);  
            stream_NAME.add(fn);

            LPAREN3=this.match(this.input,LPAREN,iemlParser.FOLLOW_LPAREN_in_functionEval97);  
            stream_LPAREN.add(LPAREN3);

            // /eclipse/workspace/imelpreter/js/ieml.g:24:20: (exp= starexpr | otherfn= functionEval )
            var alt1=2;
            var LA1_0 = this.input.LA(1);

            if ( (LA1_0==STAR) ) {
                alt1=1;
            }
            else if ( (LA1_0==NAME) ) {
                alt1=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 1, 0, this.input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:24:21: exp= starexpr
                    this.pushFollow(iemlParser.FOLLOW_starexpr_in_functionEval102);
                    exp=this.starexpr();

                    this.state._fsp--;

                    stream_starexpr.add(exp.getTree());


                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:24:36: otherfn= functionEval
                    this.pushFollow(iemlParser.FOLLOW_functionEval_in_functionEval108);
                    otherfn=this.functionEval();

                    this.state._fsp--;

                    stream_functionEval.add(otherfn.getTree());


                    break;

            }

            RPAREN4=this.match(this.input,RPAREN,iemlParser.FOLLOW_RPAREN_in_functionEval111);  
            stream_RPAREN.add(RPAREN4);



            // AST REWRITE
            // elements: otherfn, fn, exp
            // token labels: fn
            // rule labels: exp, otherfn, retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_fn=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token fn",fn);
            var stream_exp=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token exp",exp!=null?exp.tree:null);
            var stream_otherfn=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token otherfn",otherfn!=null?otherfn.tree:null);
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 24:65: -> ^( FUNCTION $fn ( $exp)? ( $otherfn)? )
            {
                // /eclipse/workspace/imelpreter/js/ieml.g:24:68: ^( FUNCTION $fn ( $exp)? ( $otherfn)? )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(FUNCTION, "FUNCTION"), root_1);

                this.adaptor.addChild(root_1, stream_fn.nextNode());
                // /eclipse/workspace/imelpreter/js/ieml.g:24:83: ( $exp)?
                if ( stream_exp.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_exp.nextTree());

                }
                stream_exp.reset();
                // /eclipse/workspace/imelpreter/js/ieml.g:24:89: ( $otherfn)?
                if ( stream_otherfn.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_otherfn.nextTree());

                }
                stream_otherfn.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    starexpr_return: (function() {
        iemlParser.starexpr_return = function(){};
        org.antlr.lang.extend(iemlParser.starexpr_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:26:1: starexpr : STAR category= expr STAR STAR -> ^( EXPRESSION $category) ;
    // $ANTLR start "starexpr"
    starexpr: function() {
        var retval = new iemlParser.starexpr_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var STAR5 = null;
        var STAR6 = null;
        var STAR7 = null;
         var category = null;

        var STAR5_tree=null;
        var STAR6_tree=null;
        var STAR7_tree=null;
        var stream_STAR=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token STAR");
        var stream_expr=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule expr");
        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:26:9: ( STAR category= expr STAR STAR -> ^( EXPRESSION $category) )
            // /eclipse/workspace/imelpreter/js/ieml.g:26:11: STAR category= expr STAR STAR
            STAR5=this.match(this.input,STAR,iemlParser.FOLLOW_STAR_in_starexpr135);  
            stream_STAR.add(STAR5);

            this.pushFollow(iemlParser.FOLLOW_expr_in_starexpr139);
            category=this.expr();

            this.state._fsp--;

            stream_expr.add(category.getTree());
            STAR6=this.match(this.input,STAR,iemlParser.FOLLOW_STAR_in_starexpr141);  
            stream_STAR.add(STAR6);

            STAR7=this.match(this.input,STAR,iemlParser.FOLLOW_STAR_in_starexpr143);  
            stream_STAR.add(STAR7);



            // AST REWRITE
            // elements: category
            // token labels: 
            // rule labels: category, retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_category=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token category",category!=null?category.tree:null);
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 26:40: -> ^( EXPRESSION $category)
            {
                // /eclipse/workspace/imelpreter/js/ieml.g:26:43: ^( EXPRESSION $category)
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(EXPRESSION, "EXPRESSION"), root_1);

                this.adaptor.addChild(root_1, stream_category.nextTree());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    expr_return: (function() {
        iemlParser.expr_return = function(){};
        org.antlr.lang.extend(iemlParser.expr_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:28:1: expr : ( cat0 | cat1 | cat2 | cat3 | cat4 | cat5 );
    // $ANTLR start "expr"
    expr: function() {
        var retval = new iemlParser.expr_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

         var cat08 = null;
         var cat19 = null;
         var cat210 = null;
         var cat311 = null;
         var cat412 = null;
         var cat513 = null;


        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:28:6: ( cat0 | cat1 | cat2 | cat3 | cat4 | cat5 )
            var alt2=6;
            alt2 = this.dfa2.predict(this.input);
            switch (alt2) {
                case 1 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:28:8: cat0
                    root_0 = this.adaptor.nil();

                    this.pushFollow(iemlParser.FOLLOW_cat0_in_expr160);
                    cat08=this.cat0();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, cat08.getTree());


                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:28:15: cat1
                    root_0 = this.adaptor.nil();

                    this.pushFollow(iemlParser.FOLLOW_cat1_in_expr164);
                    cat19=this.cat1();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, cat19.getTree());


                    break;
                case 3 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:28:22: cat2
                    root_0 = this.adaptor.nil();

                    this.pushFollow(iemlParser.FOLLOW_cat2_in_expr168);
                    cat210=this.cat2();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, cat210.getTree());


                    break;
                case 4 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:28:29: cat3
                    root_0 = this.adaptor.nil();

                    this.pushFollow(iemlParser.FOLLOW_cat3_in_expr172);
                    cat311=this.cat3();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, cat311.getTree());


                    break;
                case 5 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:28:36: cat4
                    root_0 = this.adaptor.nil();

                    this.pushFollow(iemlParser.FOLLOW_cat4_in_expr176);
                    cat412=this.cat4();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, cat412.getTree());


                    break;
                case 6 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:28:43: cat5
                    root_0 = this.adaptor.nil();

                    this.pushFollow(iemlParser.FOLLOW_cat5_in_expr180);
                    cat513=this.cat5();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, cat513.getTree());


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    cat0_return: (function() {
        iemlParser.cat0_return = function(){};
        org.antlr.lang.extend(iemlParser.cat0_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:30:1: cat0 : PRIMITIVE L0LM -> ^( CAT0 PRIMITIVE ) ;
    // $ANTLR start "cat0"
    cat0: function() {
        var retval = new iemlParser.cat0_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var PRIMITIVE14 = null;
        var L0LM15 = null;

        var PRIMITIVE14_tree=null;
        var L0LM15_tree=null;
        var stream_PRIMITIVE=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token PRIMITIVE");
        var stream_L0LM=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token L0LM");

        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:30:6: ( PRIMITIVE L0LM -> ^( CAT0 PRIMITIVE ) )
            // /eclipse/workspace/imelpreter/js/ieml.g:30:8: PRIMITIVE L0LM
            PRIMITIVE14=this.match(this.input,PRIMITIVE,iemlParser.FOLLOW_PRIMITIVE_in_cat0188);  
            stream_PRIMITIVE.add(PRIMITIVE14);

            L0LM15=this.match(this.input,L0LM,iemlParser.FOLLOW_L0LM_in_cat0190);  
            stream_L0LM.add(L0LM15);



            // AST REWRITE
            // elements: PRIMITIVE
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);

            root_0 = this.adaptor.nil();
            // 30:23: -> ^( CAT0 PRIMITIVE )
            {
                // /eclipse/workspace/imelpreter/js/ieml.g:30:26: ^( CAT0 PRIMITIVE )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(CAT0, "CAT0"), root_1);

                this.adaptor.addChild(root_1, stream_PRIMITIVE.nextNode());

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    cat1_return: (function() {
        iemlParser.cat1_return = function(){};
        org.antlr.lang.extend(iemlParser.cat1_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:31:1: cat1 : ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT ) L1LM -> ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? ) ;
    // $ANTLR start "cat1"
    cat1: function() {
        var retval = new iemlParser.cat1_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EVENT16 = null;
        var L1LM17 = null;
         var first = null;
         var second = null;
         var third = null;

        var EVENT16_tree=null;
        var L1LM17_tree=null;
        var stream_EVENT=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token EVENT");
        var stream_L1LM=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token L1LM");
        var stream_cat0=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule cat0");
        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:31:6: ( ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT ) L1LM -> ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? ) )
            // /eclipse/workspace/imelpreter/js/ieml.g:31:8: ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT ) L1LM
            // /eclipse/workspace/imelpreter/js/ieml.g:31:8: ( (first= cat0 (second= cat0 (third= cat0 )? )? ) | EVENT )
            var alt5=2;
            var LA5_0 = this.input.LA(1);

            if ( (LA5_0==PRIMITIVE) ) {
                alt5=1;
            }
            else if ( (LA5_0==EVENT) ) {
                alt5=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 5, 0, this.input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:31:9: (first= cat0 (second= cat0 (third= cat0 )? )? )
                    // /eclipse/workspace/imelpreter/js/ieml.g:31:9: (first= cat0 (second= cat0 (third= cat0 )? )? )
                    // /eclipse/workspace/imelpreter/js/ieml.g:31:10: first= cat0 (second= cat0 (third= cat0 )? )?
                    this.pushFollow(iemlParser.FOLLOW_cat0_in_cat1209);
                    first=this.cat0();

                    this.state._fsp--;

                    stream_cat0.add(first.getTree());
                    // /eclipse/workspace/imelpreter/js/ieml.g:31:21: (second= cat0 (third= cat0 )? )?
                    var alt4=2;
                    var LA4_0 = this.input.LA(1);

                    if ( (LA4_0==PRIMITIVE) ) {
                        alt4=1;
                    }
                    switch (alt4) {
                        case 1 :
                            // /eclipse/workspace/imelpreter/js/ieml.g:31:22: second= cat0 (third= cat0 )?
                            this.pushFollow(iemlParser.FOLLOW_cat0_in_cat1214);
                            second=this.cat0();

                            this.state._fsp--;

                            stream_cat0.add(second.getTree());
                            // /eclipse/workspace/imelpreter/js/ieml.g:31:39: (third= cat0 )?
                            var alt3=2;
                            var LA3_0 = this.input.LA(1);

                            if ( (LA3_0==PRIMITIVE) ) {
                                alt3=1;
                            }
                            switch (alt3) {
                                case 1 :
                                    // /eclipse/workspace/imelpreter/js/ieml.g:31:39: third= cat0
                                    this.pushFollow(iemlParser.FOLLOW_cat0_in_cat1218);
                                    third=this.cat0();

                                    this.state._fsp--;

                                    stream_cat0.add(third.getTree());


                                    break;

                            }



                            break;

                    }






                    break;
                case 2 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:31:51: EVENT
                    EVENT16=this.match(this.input,EVENT,iemlParser.FOLLOW_EVENT_in_cat1226);  
                    stream_EVENT.add(EVENT16);



                    break;

            }

            L1LM17=this.match(this.input,L1LM,iemlParser.FOLLOW_L1LM_in_cat1229);  
            stream_L1LM.add(L1LM17);



            // AST REWRITE
            // elements: EVENT, first, second, third
            // token labels: 
            // rule labels: first, retval, third, second
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_first=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token first",first!=null?first.tree:null);
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);
            var stream_third=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token third",third!=null?third.tree:null);
            var stream_second=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token second",second!=null?second.tree:null);

            root_0 = this.adaptor.nil();
            // 31:63: -> ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? )
            {
                // /eclipse/workspace/imelpreter/js/ieml.g:31:66: ^( CAT1 ( $first)? ( $second)? ( $third)? ( EVENT )? )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(CAT1, "CAT1"), root_1);

                // /eclipse/workspace/imelpreter/js/ieml.g:31:73: ( $first)?
                if ( stream_first.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_first.nextTree());

                }
                stream_first.reset();
                // /eclipse/workspace/imelpreter/js/ieml.g:31:81: ( $second)?
                if ( stream_second.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_second.nextTree());

                }
                stream_second.reset();
                // /eclipse/workspace/imelpreter/js/ieml.g:31:90: ( $third)?
                if ( stream_third.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_third.nextTree());

                }
                stream_third.reset();
                // /eclipse/workspace/imelpreter/js/ieml.g:31:98: ( EVENT )?
                if ( stream_EVENT.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_EVENT.nextNode());

                }
                stream_EVENT.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    cat2_return: (function() {
        iemlParser.cat2_return = function(){};
        org.antlr.lang.extend(iemlParser.cat2_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // /eclipse/workspace/imelpreter/js/ieml.g:32:1: cat2 : first= cat1 (second= cat1 (third= cat1 )? )? L2LM -> ^( CAT2 $first ( $second)? ( $third)? ) ;
    // $ANTLR start "cat2"
    cat2: function() {
        var retval = new iemlParser.cat2_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var L2LM18 = null;
         var first = null;
         var second = null;
         var third = null;

        var L2LM18_tree=null;
        var stream_L2LM=new org.antlr.runtime.tree.RewriteRuleTokenStream(this.adaptor,"token L2LM");
        var stream_cat1=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"rule cat1");
        try {
            // /eclipse/workspace/imelpreter/js/ieml.g:32:6: (first= cat1 (second= cat1 (third= cat1 )? )? L2LM -> ^( CAT2 $first ( $second)? ( $third)? ) )
            // /eclipse/workspace/imelpreter/js/ieml.g:32:8: first= cat1 (second= cat1 (third= cat1 )? )? L2LM
            this.pushFollow(iemlParser.FOLLOW_cat1_in_cat2259);
            first=this.cat1();

            this.state._fsp--;

            stream_cat1.add(first.getTree());
            // /eclipse/workspace/imelpreter/js/ieml.g:32:19: (second= cat1 (third= cat1 )? )?
            var alt7=2;
            var LA7_0 = this.input.LA(1);

            if ( (LA7_0==PRIMITIVE||LA7_0==EVENT) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // /eclipse/workspace/imelpreter/js/ieml.g:32:20: second= cat1 (third= cat1 )?
                    this.pushFollow(iemlParser.FOLLOW_cat1_in_cat2264);
                    second=this.cat1();

                    this.state._fsp--;

                    stream_cat1.add(second.getTree());
                    // /eclipse/workspace/imelpreter/js/ieml.g:32:37: (third= cat1 )?
                    var alt6=2;
                    var LA6_0 = this.input.LA(1);

                    if ( (LA6_0==PRIMITIVE||LA6_0==EVENT) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // /eclipse/workspace/imelpreter/js/ieml.g:32:37: third= cat1
                            this.pushFollow(iemlParser.FOLLOW_cat1_in_cat2268);
                            third=this.cat1();

                            this.state._fsp--;

                            stream_cat1.add(third.getTree());


                            break;

                    }



                    break;

            }

            L2LM18=this.match(this.input,L2LM,iemlParser.FOLLOW_L2LM_in_cat2273);  
            stream_L2LM.add(L2LM18);



            // AST REWRITE
            // elements: second, third, first
            // token labels: 
            // rule labels: first, retval, third, second
            // token list labels: 
            // rule list labels: 
            retval.tree = root_0;
            var stream_first=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token first",first!=null?first.tree:null);
            var stream_retval=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token retval",retval!=null?retval.tree:null);
            var stream_third=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token third",third!=null?third.tree:null);
            var stream_second=new org.antlr.runtime.tree.RewriteRuleSubtreeStream(this.adaptor,"token second",second!=null?second.tree:null);

            root_0 = this.adaptor.nil();
            // 32:51: -> ^( CAT2 $first ( $second)? ( $third)? )
            {
                // /eclipse/workspace/imelpreter/js/ieml.g:32:54: ^( CAT2 $first ( $second)? ( $third)? )
                {
                var root_1 = this.adaptor.nil();
                root_1 = this.adaptor.becomeRoot(this.adaptor.create(CAT2, "CAT2"), root_1);

                this.adaptor.addChild(root_1, stream_first.nextTree());
                // /eclipse/workspace/imelpreter/js/ieml.g:32:68: ( $second)?
                if ( stream_second.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_second.nextTree());

                }
                stream_second.reset();
                // /eclipse/workspace/imelpreter/js/ieml.g:32:77: ( $third)?
                if ( stream_third.hasNext() ) {
                    this.adaptor.addChild(root_1, stream_third.nextTree());

                }
                stream_third.reset();

                this.adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;


            retval.stop = this.input.LT(-1);
